--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ window.addEventListener('load',()=>{
   const rec=params.get('myRecords');
   const nick=params.get('nickname');
   if(nick){
-    document.querySelector('h1').textContent=`💥 ${nick}의 욕설 변환기 💥`;
+    document.querySelector('h1').textContent=`💥 ${nick}님의 욕설 변환기 💥`;
   }
   if(rec){
     const stored=decodeRecordsShort(rec);
@@ -385,3 +385,4 @@ window.addEventListener('load',()=>{
 </script>
 </body>
 </html>
+
