--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div id="my-records-form">
         <input type="text" id="nicknameInput" placeholder="닉네임 (예: 철수)" />
         <div>
-          <input type="text" id="my-record-input-original" placeholder="원래 욕설 입력" />
+          <input type="text" id="my-record-input-original" placeholder="원래 비속어 입력" />
           <input type="text" id="my-record-input-replaced" placeholder="나만의 변환어 입력" />
         </div>
         <button id="my-record-add-btn">➕ 추가</button>
@@ -386,5 +386,6 @@ window.addEventListener('load',()=>{
 </script>
 </body>
 </html>
+
 
 
